force-app/main/default/objects/Recipe__c/Recipe__c.object-meta.xml
<CustomObject>
    <label>Recipe</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recipes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>