force-app/main/default/objects/Recipe__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Complete description of the recipe, properties and usage instructions</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>