force-app/main/default/objects/Recipe__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>Number of months until the product expires when unopened</description>
    <label>Expiration Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>