force-app/main/default/objects/Recipe__c/fields/PAO__c.field-meta.xml
<CustomField>
    <fullName>PAO__c</fullName>
    <description>Period After Opening: number of months the product can be used once opened</description>
    <inlineHelpText>Period After Opening: number of months the product can be used once opened</inlineHelpText>
    <label>PAO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>