force-app/main/default/objects/Recipe__c/fields/Skin_Type__c.field-meta.xml
<CustomField>
    <fullName>Skin_Type__c</fullName>
    <description>Skin type the product is indicated for: Normal, Dry, Oily, Family Skin Care</description>
    <label>Skin Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Dry Skin</fullName>
            </value>
            <value>
                <fullName>Oily Skin</fullName>
            </value>
            <value>
                <fullName>Family Skin Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>