force-app/main/default/objects/Recipe__c/fields/Total_Quantity_ml__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantity_ml__c</fullName>
    <description>Total quantity produced by the recipe adding all recipe lines, in ml</description>
    <label>Total Quantity (ml)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>