force-app/main/default/objects/Recipe__c/listViews/All_Recipes.listView-meta.xml
<ListView>
    <fullName>All_Recipes</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>All Recipes</label>
</ListView>